minor corrections on partners align

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -1159,3 +1159,20 @@ input[type=text], select, textarea {
     width: 100%;
     height: 100%;
 }
+
+.advancy-container {
+    margin-top: 8px;
+}
+
+.vertigeo-container {
+    margin-top: 10px;
+}
+
+@media(min-width:488px) {
+    .advancy-container {
+        margin-top: 13px;
+    }
+    .vertigeo-container {
+        margin-top: 14px
+    }
+}
